hw-detect (1.33) UNRELEASED; urgency=low

  [ Martin Michlmayr ]
  * Add a description of Intel's IXP400 Ethernet driver.

  [ Colin Watson ]
  * Replace another udevsynthesize call with update-dev.
  * Remove old DEB_HOST_ARCH_* and CFLAGS_ARCH cruft.
  * Fix CFLAGS so that the apparently-intended version formerly in
    debian/rules actually gets used; no impact on size, though.

 -- Martin Michlmayr <tbm@cyrius.com>  Fri, 13 Jan 2006 23:58:31 +0000

hw-detect (1.32) unstable; urgency=low

  * I observed a scsi disk that required three seconds from the end of
    hw-detect until the kernel brought it up. (This may have involved udev,
    not sure). Try to deal with this kind of race slightly better in
    disk-detect by probing a few times with short pauses before concluding
    that there is no disk.

  [ Updated translations ]
  * Catalan (ca.po) by Guillem Jover
  * Greek, Modern (1453-) (el.po) by quad-nrg.net
  * Finnish (fi.po) by Tapio Lehtonen
  * Swedish (sv.po) by Daniel Nylander
  * Vietnamese (vi.po) by Clytie Siddall

 -- Joey Hess <joeyh@debian.org>  Mon,  2 Jan 2006 21:15:56 -0500

hw-detect (1.31) unstable; urgency=low

  * If d-i is using pcmciautils-udeb instead of pcmcia-cs-udeb (needed on
    2.6.13 kernels), then install pcmciautils as well as pcmcia-cs.
  * The new update-dev that handles udev has been around for a while, so
    drop old calls to udevstart/udevsynthesize.
  * Install discover1 in /target even if d-i is using udev, since X's
    maintainer scripts need discover.

  [ Updated translations ]
  * Galician (gl.po) by Jacobo Tarrio
  * Malagasy (mg.po) by Jaonary Rabarisoa
  * Slovenian (sl.po) by Jure Čuhalev

 -- Colin Watson <cjwatson@debian.org>  Sun, 25 Dec 2005 15:12:11 +0000

hw-detect (1.30) unstable; urgency=low

  * udebs are not allowed to have ORed deps (and it was adding cruft to the
    build) so remove the discover/udev deps entirely. It would be better to