@@ -1,0 +1,15 @@
+# Format is: 'id-in-prtconf:description:driver'
+
+# Sun Microsystems
+SUNW,hme:"HAPPY MEAL" 10/100 Ethernet:sunhme
+ledma:"LANCE" 10Mbit Ethernet:sunlance
+SUNW,qfe:SunQuad SBus Ethernet:sunqe
+espdma:ESP SCSI:esp
+SUNW,fas:FAS-336 ESP SCSI:esp
+
+# QLogic Corp.
+QLGC,isp:ISP SCSI:qlogic_isp
+
+# MyriCOM, Inc.
+MYRICOM,mlanai:MyriNET Gigabit Ethernet:myri_sbus
+myri:MyriNET Gigabit Ethernet:myri_sbus
