@@ -9,7 +9,12 @@ hw-detect (1.33) UNRELEASED; urgency=low
   * Fix CFLAGS so that the apparently-intended version formerly in
     debian/rules actually gets used; no impact on size, though.
 
- -- Martin Michlmayr <tbm@cyrius.com>  Fri, 13 Jan 2006 23:58:31 +0000
+  [ Frans Pop ]
+  * Add support for detecting sbus devices on sparc now that we are not using
+    discover anymore. May need to be extended to also add the drivers to the
+    initramfs initrd or /etc/modules. Uses prtconf from sparc-utils-udeb.
+
+ -- Frans Pop <fjp@debian.org>  Mon, 23 Jan 2006 19:03:00 +0100
 
 hw-detect (1.32) unstable; urgency=low
 
